--- a/db/sql/postgresql/create_table_history.sql.j2
+++ b/db/sql/postgresql/create_table_history.sql.j2
@@ -1,5 +1,5 @@
 CREATE TABLE IF NOT EXISTS {{ TABLENAME }} (
-    itemid DECIMAL,
+    itemid BIGINT,
     clock INTEGER,
     value FLOAT,
     PRIMARY KEY (itemid, clock)
