--- a/db/sql/postgresql/create_table_stats.sql.j2
+++ b/db/sql/postgresql/create_table_stats.sql.j2
@@ -1,5 +1,5 @@
 CREATE TABLE IF NOT EXISTS {{ TABLENAME }} (
-    "itemid" DECIMAL PRIMARY KEY,
+    "itemid" BIGINT PRIMARY KEY,
     "sum" FLOAT,
     "sqr_sum" FLOAT,
     "cnt" INTEGER,
